# esp32-fluke8050

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ttgo-xy-cp-v1.1-freertos.c
main/include/: esp32-cpu1.h  screen-core.h  screen-fluke8050.h
main/screen/: screen-core.c  screen-fluke8050.c
main/tasks/: esp32-cpu1.c
